[package]
name = "diablo-client"
version = "0.1.0"
authors = ["Qiangsheng Gao <qgao5190@uni.sydney.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
rustyline = "6.3.0"
structopt = "0.3.17"

libra-types = { path = "../../types", version = "0.1.0" }
cli = {path = "../cli", version = "0.1.0"}