[package]
name = "diablo-client"
version = "0.1.0"
authors = ["Qiangsheng Gao <qgao5190@uni.sydney.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
chrono = "0.4.15"
hex = "0.4.2"
reqwest = { version = "0.10.8", features = ["blocking", "json", "rustls-tls"], default-features = false }
rustyline = "6.3.0"
structopt = "0.3.17"

crash-handler = { path = "../../common/crash-handler", version = "0.1.0" }
libra-logger =  { path = "../../common/logger", version = "0.1.0" }
libra-types = { path = "../../types", version = "0.1.0" }
cli = {path = "../cli", version = "0.1.0"}